--- a/package.json
+++ b/package.json
@@ -6,5 +6,13 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
-    "author": "yuria_cats"
+    "author": "yuria_cats",
+    "devDependencies": {
+        "@types/node": "^12.12.54",
+        "npm-run-all": "^4.1.5",
+        "rimraf": "^3.0.2",
+        "ts-node": "^8.10.2",
+        "ts-node-dev": "^1.0.0-pre.56",
+        "typescript": "^3.9.7"
+    }
 }
