--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "author": "yuria_cats",
     "devDependencies": {
         "@types/node": "^12.12.54",
+        "jest": "^29.1.2",
         "npm-run-all": "^4.1.5",
         "rimraf": "^3.0.2",
         "ts-node": "^8.10.2",
