--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     },
     "author": "yuria_cats",
     "devDependencies": {
+        "@types/jest": "^29.1.1",
         "@types/node": "^12.12.54",
         "jest": "^29.1.2",
         "npm-run-all": "^4.1.5",
         "rimraf": "^3.0.2",
+        "ts-jest": "^29.0.3",
         "ts-node": "^8.10.2",
         "ts-node-dev": "^1.0.0-pre.56",
-        "typescript": "^3.9.7"
+        "typescript": "^3.9.10"
     }
 }
