--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "Node.js Project",
     "main": "app.js",
     "scripts": {
-        "test": "jest"
+        "test": "jest",
+        "dev": "ts-node ./src/scraping_timetable.ts "
     },
     "author": "yuria_cats",
     "devDependencies": {
@@ -17,5 +18,9 @@
         "ts-node": "^8.10.2",
         "ts-node-dev": "^1.0.0-pre.56",
         "typescript": "^4.8.4"
+    },
+    "dependencies": {
+        "@types/superagent": "^4.1.15",
+        "superagent": "^8.0.2"
     }
 }
