--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "author": "yuria_cats",
     "devDependencies": {
         "@types/jest": "^29.1.1",
-        "@types/node": "^12.12.54",
         "jest": "^29.1.2",
+        "jsdom": "^20.0.1",
         "npm-run-all": "^4.1.5",
         "rimraf": "^3.0.2",
         "ts-jest": "^29.0.3",
@@ -22,7 +22,7 @@
     "dependencies": {
         "@types/jsdom": "^20.0.0",
         "@types/superagent": "^4.1.15",
-        "jsdom": "^20.0.1",
+        "csv": "^6.2.1",
         "superagent": "^8.0.2"
     }
 }
