--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "app.js",
     "scripts": {
         "test": "jest",
-        "dev": "ts-node ./src/scraping_timetable.ts "
+        "dev": "",
+        "scraping": "ts-node ./src/scraping_timetable.ts "
     },
     "author": "yuria_cats",
     "devDependencies": {
