--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
         "typescript": "^4.8.4"
     },
     "dependencies": {
+        "@types/express": "^4.17.14",
         "@types/jsdom": "^20.0.0",
         "@types/superagent": "^4.1.15",
         "csv": "^6.2.1",
+        "express": "^4.18.2",
         "superagent": "^8.0.2"
     }
 }
