--- a/package.json
+++ b/package.json
@@ -1,31 +1,27 @@
 {
-    "name": "yamanote_wasuremon_node",
-    "version": "0.0.0",
-    "description": "Node.js Project",
-    "main": "app.js",
-    "scripts": {
-        "test": "jest",
-        "dev": "",
-        "scraping": "ts-node ./src/scraping_timetable.ts "
-    },
-    "author": "yuria_cats",
-    "devDependencies": {
-        "@types/jest": "^29.1.1",
-        "jest": "^29.1.2",
-        "jsdom": "^20.0.1",
-        "npm-run-all": "^4.1.5",
-        "rimraf": "^3.0.2",
-        "ts-jest": "^29.0.3",
-        "ts-node": "^8.10.2",
-        "ts-node-dev": "^1.0.0-pre.56",
-        "typescript": "^4.8.4"
-    },
-    "dependencies": {
-        "@types/express": "^4.17.14",
-        "@types/jsdom": "^20.0.0",
-        "@types/superagent": "^4.1.15",
-        "csv": "^6.2.1",
-        "express": "^4.18.2",
-        "superagent": "^8.0.2"
-    }
+  "name": "yamanote-wasuremon-node",
+  "version": "0.0.0",
+  "private": true,
+  "scripts": {
+    "start": "node ./bin/www"
+  },
+  "dependencies": {
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "express": "~4.16.1",
+    "jsdom": "^20.0.1",
+    "npm-run-all": "^4.1.5",
+    "http-errors": "~1.6.3",
+    "jade": "~1.11.0",
+    "morgan": "~1.9.1",
+    "ts-jest": "^29.0.3",
+    "ts-node": "^8.10.2",
+    "ts-node-dev": "^1.0.0-pre.56",
+    "typescript": "^4.8.4",
+    "@types/express": "^4.17.14",
+    "@types/jsdom": "^20.0.0",
+    "@types/superagent": "^4.1.15",
+    "csv": "^6.2.1",
+    "superagent": "^8.0.2"
+  }
 }
