--- a/package.json
+++ b/package.json
@@ -3,25 +3,28 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "jest"
   },
   "dependencies": {
+    "@types/express": "^4.17.14",
+    "@types/jest": "^29.2.2",
+    "@types/jsdom": "^20.0.0",
+    "@types/superagent": "^4.1.15",
     "cookie-parser": "~1.4.4",
+    "csv": "^6.2.1",
     "debug": "~2.6.9",
     "express": "~4.16.1",
-    "jsdom": "^20.0.1",
-    "npm-run-all": "^4.1.5",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "jest": "^29.1.2",
+    "jsdom": "^20.0.1",
     "morgan": "~1.9.1",
+    "npm-run-all": "^4.1.5",
+    "superagent": "^8.0.2",
     "ts-jest": "^29.0.3",
     "ts-node": "^8.10.2",
     "ts-node-dev": "^1.0.0-pre.56",
-    "typescript": "^4.8.4",
-    "@types/express": "^4.17.14",
-    "@types/jsdom": "^20.0.0",
-    "@types/superagent": "^4.1.15",
-    "csv": "^6.2.1",
-    "superagent": "^8.0.2"
+    "typescript": "^4.8.4"
   }
 }
