--- a/package.json
+++ b/package.json
@@ -3,18 +3,23 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "npx ts-node src/app.ts",
     "test": "jest"
   },
   "dependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
+    "@types/helmet": "^4.0.0",
     "@types/jest": "^29.2.2",
     "@types/jsdom": "^20.0.0",
     "@types/superagent": "^4.1.15",
+    "body-parser": "^1.20.1",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "csv": "^6.2.1",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "helmet": "^6.0.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "jest": "^29.1.2",
